created html templates

--- a/flaskr/3D20.ipynb
+++ b/flaskr/3D20.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,34 +24,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "liquor = [\"double\", \"Rum\", \"Whiskey\", \"Wine\", \"Vodka\", \"your choice\"]\n",
-    "mixers = [\"Coke\", \"Club soda\", \"nothing to dilute it\", \"milk\", \"heavy cream\", \"Pineapple juice\"]\n",
+    "liquor = [\"double\", \"Rum\", \"Whiskey\", \"Wine\", \"Vodka\", \"spiced Rum\", \"your choice\"]\n",
+    "mixers = [\"Coke\", \"Club soda\", \"nothing to dilute it\", \"milk\", \"heavy cream\", \"Pineapple juice\", \n",
+    "          \"Monster\", \"orange juice\"]\n",
     "seasoning = [\"a dollop of honey\", \"salted rim\", \"a splash of lime juice\", \"some hot sauce\", \n",
-    "             \"a dash of Venilla\", \"whatever evil the person to your right decides\"]"
+    "             \"a dash of Venilla\", \"whatever evil the person to your right decides\", \"a tablespoon salsa\",\n",
+    "             \"a dollop of Mayo\", \"a squirt of musturd\", \"a wedge of lime\", \"a dash of maple syrup\", \n",
+    "             \"a slice of banana\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "spiced Rum\n",
+      "Wine\n",
+      "spiced Rum\n",
+      "spiced Rum\n",
+      "spiced Rum\n",
+      "Vodka\n",
+      "Wine\n",
       "your choice\n",
-      "Whiskey\n",
-      "your choice\n",
-      "Vodka\n",
-      "Vodka\n",
-      "Vodka\n",
-      "Whiskey\n",
-      "your choice\n",
-      "Vodka\n",
+      "spiced Rum\n",
       "Whiskey\n"
      ]
     }
@@ -66,25 +69,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['double',\n",
+       "['spiced Rum',\n",
+       " 'your choice',\n",
        " 'Rum',\n",
+       " 'your choice',\n",
+       " 'Vodka',\n",
        " 'Wine',\n",
-       " 'Wine',\n",
-       " 'double',\n",
-       " 'double',\n",
-       " 'double',\n",
-       " 'double',\n",
-       " 'Wine',\n",
-       " 'Vodka']"
+       " 'Vodka',\n",
+       " 'spiced Rum',\n",
+       " 'your choice',\n",
+       " 'your choice']"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,16 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'You are mixing a shot of Whiskey with nothing to dilute it, with a dash of Venilla'"
+       "'You are mixing a double shot of your choice with some Club soda, with salted rim'"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,22 +150,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'You are mixing a shot of Vodka with some Pineapple juice, with a dollop of honey'"
+       "'You are mixing a shot of spiced Rum with some orange juice, with some hot sauce'"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bar_tend(liquor, mixers, seasoning, lucky_number = 17)"
+    "bar_tend(liquor, mixers, seasoning, lucky_number = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4, 10, 17, 9"
    ]
   }
  ],
